feat: Add IA module (ChatGPT integration), Authentication (JWT), Email service (SMTP), Reporting, Rate limiting, and Hardware IoT support - 23 new files (60K+ lines)